--- a/css/styles.css
+++ b/css/styles.css
@@ -98,3 +98,9 @@ select {
   position:relative;
   bottom: 60px;
 }
+
+#info {
+  position:absolute;
+  bottom:10px;
+  border-top:1px white solid;
+}
