--- a/css/styles.css
+++ b/css/styles.css
@@ -104,3 +104,20 @@ select {
   bottom:10px;
   border-top:1px white solid;
 }
+
+hr {
+  color: white;
+  width: 250px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#watermarkCount {
+  color: white;
+  position: absolute;
+  right: 10px;
+  top: -40px;
+  font-weight: bold;
+  font-size: xx-large;
+  /* display:none; */
+}
